# ros_orchestrator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
launch/: orchestrator.launch
src/: orchestrator.py
src/orchestrator/: LauncherProcess.py  __init__.py  manager.py
srv/: Orchestrator.srv
